added SPECT_dicom_to_interfile to release notes and User's Guide

--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -946,7 +946,7 @@ The exclusions of an event type is false by default.
 \end{table}
 
 
-\subsection{Multi header format}
+\subsubsection{Multi header format}
 \label{multi-file-format}
 It is often useful to be able to constract a single dataset from multiply components (e.g. images
 or projection data). We have a (STIR-specific) header format for this which is very simple, for example
@@ -961,6 +961,11 @@ Each ``component'' will be read independently, so could in principle be in a dif
 from the others.
 
 We currently support this format for dynamic images and projection data.
+
+\subsubsection{SPECT DICOM projection data}
+SPECT raw projection data in DICOM format is currently only supported by running the  \texttt{SPECT\_dicom\_to\_interfile} utility,
+see \ref{utility:SPECT_dicom_to_interfile}.
+
 \subsection{
 List mode processing}
 \label{sec:listmodeprocessing}
@@ -3400,6 +3405,17 @@ has not been used recently however, so beware.
 These programs convert from/to GIPL format. The latter program has a somewhat wrong name.
 It will actually read an image in any format supported by STIR.
 
+{ \subsubsubsection{SPECT\_dicom\_to\_interfile}\label{utility:SPECT_dicom_to_interfile}}
+This (still somewhat preliminary) utility reads a DICOM file with SPECT projection data and extracts the data and writes one or more Interfile 3.3
+headers. You will need to pass a filename-prefix. The utility will output several files:
+\begin{itemize}
+\item \texttt{<prefix>.s} the raw data
+\item \texttt{<prefix><string>.hdr} multiple headers, one per energy window grouping, where the \texttt{<string>} is given by the grouping name, read from (0054,0018).
+\end{itemize}
+Note that we currently do not read the Energy Window Vector (0054,0010), which could mean that the output data is incorrect.
+Also, dynamic and gated studies are not supported. You will have to edit the headers yourself.
+
+See also \url{https://dicom.nema.org/medical/dicom/current/output/chtml/part03/sect_C.8.4.8.html}{Section C.8.4.8 of the DICOM standard}.
 
 \subsubsection{
 Filtering image data}
