clean-up and doc of stir_timings
also added extra options for friendlier usage

--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -3699,6 +3699,13 @@ Interfacing with SimSET}
 a popular Monte Carlo simulator for PET and SPECT. This
 is all preliminary. Check out the \texttt{README.txt} in the \textbf{STIR/SimSET} directory.
 
+\subsubsection{
+Performing timings of certain operations}
+The \textbf{stir\_timings} utility  is mostly useful for developers,
+but you could use it to optimise the number of OpenMP threads to use for your data.
+
+Run the utility without any arguments to get a help message.
+If you want to know what is actually timed, you will have to look at the source code.
 
 \subsection{
 User-selectable components}
